Bring bash_local directory under sysadmin.

--- a/sysadmin/Makefile
+++ b/sysadmin/Makefile
@@ -2,7 +2,7 @@
 
 SHELL := /bin/bash
 
-default: vim-gnome apt-synch
+default: vim-gnome apt-synch bash_local
 
 vim-gnome:
 	sudo apt-get install vim-gnome
@@ -11,5 +11,8 @@ vim-gnome:
 /usr/local/sbin/apt-synch: apt-synch
 	sudo ln $< $@
 
-.PHONY: vim-gnome
+bash_local:
+	$(MAKE) -C bash_local
+
+.PHONY: bash_local vim-gnome
 
