Add the correct minicom configuration
Connect to port /dev/beaglebone-serial, no HW flow control.

--- a/sysadmin/beaglebone-env-setup/Makefile
+++ b/sysadmin/beaglebone-env-setup/Makefile
@@ -8,7 +8,10 @@ PATH := $(PATH):
 newrules := $(wildcard *.rules)
 udevrules := $(addprefix /etc/udev/rules.d/, $(newrules))
 
-default: $(udevrules) packages
+default: $(udevrules) packages ~/.minirc.dfl
 
 packages:
 	get-packages
+
+~/.minirc.dfl: minirc.dfl
+	sudo cp $< $@
