Use the new utilities, tests.

--- a/sysadmin/beaglebone-env-setup/Makefile
+++ b/sysadmin/beaglebone-env-setup/Makefile
@@ -8,10 +8,19 @@ PATH := $(PATH):
 newrules := $(wildcard *.rules)
 udevrules := $(addprefix /etc/udev/rules.d/, $(newrules))
 
-default: $(udevrules) packages ~/.minirc.dfl
+default: install_udevrules minicom_setup bootstrap_card
 
-packages:
-	get-packages
+install_udevrules: $(udevrules)
+	sudo udevadm control --reload-rules
+
+bootstrap_card:
+	bootstrapbone
+
+minicom_setup: ~/.minirc.dfl
+	type minicom || sudo apt-get install minicom
 
 ~/.minirc.dfl: minirc.dfl
 	sudo cp $< $@
+
+test:
+	make -C t
