Fix dependency for apt-synch.
Also make installation of vim-gnome not stop and ask, "Really?"

--- a/sysadmin/Makefile
+++ b/sysadmin/Makefile
@@ -2,10 +2,10 @@
 
 SHELL := /bin/bash
 
-default: vim-gnome apt-synch bash_local
+default: vim-gnome /usr/local/sbin/apt-synch bash_local
 
 vim-gnome:
-	sudo apt-get install vim-gnome
+	sudo apt-get -y install vim-gnome
 	[ -f ~/.vimrc ] || ln vimrc ~/.vimrc
 
 /usr/local/sbin/apt-synch: apt-synch
@@ -15,4 +15,3 @@ bash_local:
 	$(MAKE) -C bash_local
 
 .PHONY: bash_local vim-gnome
-
